<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cardview_background">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#2D72A6"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cardview_background">

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="serif"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Ростов-на-Дону" />

            <TextView
                android:id="@+id/tvTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="serif"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivWeather"
                tools:text="+26 °C" />

            <TextView
                android:id="@+id/tvCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="serif"
                android:singleLine="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCity"
                tools:text="Умеренно сильный дождь" />

            <ImageView
                android:id="@+id/ivWeather"
                android:layout_width="87dp"
                android:layout_height="57dp"

                app:layout_constraintBottom_toBottomOf="@+id/tvCondition"
                app:layout_constraintEnd_toStartOf="@+id/tvTemp"
                app:layout_constraintTop_toTopOf="@+id/tvCondition"
                tools:srcCompat="@drawable/skc_n" />

            <TextView
                android:id="@+id/tvWet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="serif"
                android:text="@string/humidity"
                android:textColor="#EDEDED"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/tvWetValue"
                app:layout_constraintTop_toBottomOf="@+id/tvCondition" />

            <TextView
                android:id="@+id/tvWetValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="serif"
                android:textColor="#EDEDED"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvWet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvWet"
                tools:text="90%" />

            <TextView
                android:id="@+id/tvWindValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="serif"
                android:textColor="#EDEDED"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvWind"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvWind"
                tools:text="5.0 м/с" />

            <TextView
                android:id="@+id/tvWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="serif"
                android:text="@string/wind_speed"
                android:textColor="#EDEDED"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tvWet"
                app:layout_constraintTop_toBottomOf="@+id/tvWet" />

            <TextView
                android:id="@+id/tvWaterTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="serif"
                android:text="@string/water_temp"
                android:textColor="#EDEDED"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvWind"
                app:layout_constraintTop_toBottomOf="@+id/tvWind" />

            <TextView
                android:id="@+id/tvWaterValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="serif"
                android:textColor="#EDEDED"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvWaterTemp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvWaterTemp"
                app:layout_constraintTop_toTopOf="@+id/tvWaterTemp"
                tools:text="25°С" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvActivity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:itemCount="7"
        tools:listitem="@layout/list_view_item" />

</androidx.constraintlayout.widget.ConstraintLayout>